adding new template

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
 */
 /* Importing parent CSS File */
 @import url(../sweettooth/assets/css/modules.css);
+/* COLORS */
 /* 
 * OVERRIDING PARENT STYLES 
+*/
+/*
+* END OVERRIDING PARENT STYLES 
 */
