--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@
 */
 /* COLORS */
 /*Overriding parent styles*/
+a,
+a:hover,
+a:active,
+a:focus,
+a:visited {
+  text-decoration: none; }
+
 .eltdf-vertical-align-containers {
   padding: 0 15px !important; }
 
@@ -42,8 +49,6 @@
   #liste-menus-chauds .panel-heading > .panel-title > a {
     display: block;
     padding: 10px 15px; }
-  #liste-menus-chauds .panel-heading > .panel-title > a:hover {
-    text-decoration: none; }
 
 .prestations-desc-complet > ul {
   float: left; }
